feat: Enhance community real time job
